# Video-Download

./: .gitignore  README.md  downloader.py  launch.bat  launcher.vbs  main.py  pyproject.toml  requirements.txt
deploy/: deploy.sh
ig_node_module/: index.js  package-lock.json  package.json
static/: index.html  manifest.json  script.js  service-worker.js  style.css
