[project]
name = "antigravity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "browser-cookie3>=0.20.1",
    "curl-cffi>=0.14.0",
    "fastapi>=0.133.0",
    "gallery-dl>=1.31.6",
    "httpx>=0.28.1",
    "instaloader>=4.15",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "static-ffmpeg>=3.0",
    "uvicorn>=0.41.0",
    "yt-dlp>=2026.2.21",
]
